--- a/pubs.html
+++ b/pubs.html
@@ -18,7 +18,17 @@
   <div class="fore">
     <h1>Publications</h1>
     <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a> | <a href="https://scholar.google.com/citations?user=oDTfXXYAAAAJ" target="_blank">Google Scholar</a></h2>
-
+    
+    <h3>2018</h3>
+    <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1801.07501.pdf">When A Small Leak Sinks A Great Ship: Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
+      <small>
+      Husam Al Jawaheri, Mashael Al Sabah, Yazan Boshmaf, and Aiman Erbad
+    <div class=ref><i>arXiv preprint</i><br>
+      arXiv:1801.07501, Jan, 2018</div>
+    </small>
+    </p>
+    
     <h3>2016</h3>
     <p>
       <div class="title"><span class="pdf"><a class=title href="http://www.zhauniarovich.com/files/pubs/VizFilt_Aupetit2016.pdf">Visualization of Actionable Knowledge to Mitigate DRDoS Attacks</a></span></div>
