--- a/pubs.html
+++ b/pubs.html
@@ -17,7 +17,7 @@
 
   <div class="fore">
     <h1>Publications</h1>
-    <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a> | <a href="https://scholar.google.com/citations?user=oDTfXXYAAAAJ" target="_blank">Google Scholar</a></h2>
+    <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a> | <a href="https://scholar.google.com/citations?user=oDTfXXYAAAAJ" target="_blank">Google Scholar</a> | <a href="http://dblp.uni-trier.de/pers/hd/b/Boshmaf:Yazan" target="_blank">dblp</a></h2>
     
     <h3>2018</h3>
     <p>
