--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
   <div class="fore">
 
     <h1>News</h1>
-    <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a></h2>
+    <h2><a href="index.html">&laquo;&nbsp;home</a></h2>
     <div class=spacer></div>
     
     <p class="indent">
