--- a/pubs.html
+++ b/pubs.html
@@ -25,6 +25,15 @@
     
     <h3>2018</h3>
     <p>
+      <div class="title"><span class=""><a class=title href="">Source Attribution for Cryptographics API Misuse in Android Applications</a></span></div>
+      <small>
+      Ildar Muslukhov, Yazan Boshmaf, and Konstantin Beznosov
+    <div class=ref><i>Proc. of 11th ACM Asia Conference on Computer and Communications Security</i><br>
+      AsiaCCS &rsquo;18, Songdo, Incheon, Korea, Jun 2018</div>
+    </small>
+    </p>
+  
+    <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1801.07501.pdf">When A Small Leak Sinks A Great Ship: Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
       <small>
       Husam Al Jawaheri, Mashael Al Sabah, Yazan Boshmaf, and Aiman Erbad
