--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
-    
+  
+  <p class="indent">
+    <div class="underlined">Mar, 2018</div>
+    I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">U.S. Federal Trade Commission</a>
+  </p>
+
   <p class="indent">
     <div class="underlined">Jan, 2018</div>
     Our work on Tor/Bitcoin privacy has been <a href="https://www.wired.com/story/bitcoin-drug-deals-silk-road-blockchain/">covered</a> by WIRED</br>
