--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   
   <p class="indent">
     <div class="underlined">Mar, 2018</div>
-    I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">U.S. Federal Trade Commission</a>
+    I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">FTC</a>
   </p>
 
   <p class="indent">
