--- a/news.html
+++ b/news.html
@@ -23,6 +23,11 @@
     <div class=spacer></div>
     
     <p class="indent">
+    <div class="date">Mar, 2018</div>
+      I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">FTC</a>
+    </p>
+    
+    <p class="indent">
       <div class="date">Jan, 2018</div>
       Our work on Tor/Bitcoin privacy has been <a href="https://www.wired.com/story/bitcoin-drug-deals-silk-road-blockchain/">covered</a> by WIRED</br>
       I'm speaking at the <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">6th Katara Tech Forum</a>
