--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
   <h2>
     Current projects
   </h2>
+    
+  <p>
+    <div class="underlined">Internet Security Posture Assessment</div>
+    I'm collaborating with <a href="https://zmap.io/">ZMap</a> and <a href="https://censys.io/">Censys</a> folks at <a href="http://security.engin.umich.edu/">UMich</a> to explore how one would asses the security posture of a country on the Internet.
+  </p>
 
   <p>
     <div class="underlined">Mobile Cryptography Analytics</div>
@@ -95,8 +100,13 @@
   </p>
 
   <p>
-    <div class="underlined">Anonymity of Tor Hidden Services</div>
+    <div class="underlined">Exploring the (Ab)use of Bitcoin</div>
     I'm collaborating with <a href="http://www.qu.edu.qa/engineering/computer/">QU</a> folks to investigate the feasibility of deanonymizing Tor hidden service users by exploiting public Bitcoin information.
+  </p>
+    
+  <p>
+    <div class="underlined">Enterprise Logs Security Analytics</div>
+    I'm collaborating with the Cyber Security team on building data-driven cyber security intelligence and defences for the enterprise.
   </p>
 
   <h2>
