--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
   </p>
 
   <p>
-    <div class="underlined">Exploring the (Ab)use of Bitcoin</div>
+    <div class="underlined">The (Ab)use of Bitcoin</div>
     I'm collaborating with <a href="http://www.qu.edu.qa/engineering/computer/">QU</a> folks to investigate the feasibility of deanonymizing Tor hidden service users by exploiting public Bitcoin information.
   </p>
     
   <p>
-    <div class="underlined">Enterprise Logs Security Analytics</div>
+    <div class="underlined">Enterprise Log Security Analytics</div>
     I'm collaborating with the Cyber Security team on building data-driven cyber security intelligence and defences for the enterprise.
   </p>
 
