--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     
   <p>
     <div class="underlined">Enterprise Log Security Analytics</div>
-    I'm collaborating with the Cyber Security team on building data-driven cyber security intelligence and defences for the enterprise.
+    I'm collaborating with the Cyber Security team on building data-driven cyber security defences for the enterprise.
   </p>
 
   <h2>
