--- a/news.html
+++ b/news.html
@@ -30,17 +30,17 @@
     <p class="indent">
       <div class="date">Jan, 2018</div>
       Our work on Bitcoin/Tor privacy has been <a href="https://www.wired.com/story/bitcoin-drug-deals-silk-road-blockchain/">covered</a> by WIRED</br>
-      I'm speaking at the <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">6th Katara Tech Forum</a>
+      I'm speaking at the <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">6th Katara Tech Forum on Blockchain Technology</a>
     </p>
   
     <p class="indent">
       <div class="date">Nov, 2017</div>
-      I'm speaking at the 3rd HBKU Roundtable on FinTech
+      I'm speaking at the 3rd HBKU Roundtable on FinTech and Blockchains.
     </p>
     
     <p class="indent">
       <div class="date">Sep, 2017</div>
-      I'm giving a guest lecture at HBKU ICT Graduate Seminar
+      I'm giving a guest lecture at HBKU ICT Graduate Seminar on Socialbots.
     </p>
     
     <p class="indent">
@@ -55,7 +55,7 @@
 
     <p class="indent">
       <div class="date">Feb, 2017</div>
-      I'm speaking as a panelist at the <a href="http://www.hbku.edu.qa/en/academic-events/fifth-law-and-public-policy-colloquium">5th HBKU CLPP</a>
+      I'm speaking as a panelist at the <a href="http://www.hbku.edu.qa/en/academic-events/fifth-law-and-public-policy-colloquium">5th HBKU CLPP on the Regulations of Cryptocurrencies</a>
     </p>
 
     <p class="indent">
