--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
   </h2>
   
   <p class="indent">
+    <div class="underlined">Apr, 2018</div>
+    I'm attending <a href="https://icde2018.org">IEEE ICDE 2018</a>. See you in Paris!
+  </p> 
+   
+  <p class="indent">
     <div class="underlined">Mar, 2018</div>
     I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">FTC</a>
   </p>
