--- a/news.html
+++ b/news.html
@@ -23,6 +23,11 @@
     <div class=spacer></div>
     
     <p class="indent">
+    <div class="date">Apr, 2018</div>
+      I'm attending <a href="https://icde2018.org">IEEE ICDE 2018</a>. See you in Paris!
+    </p>
+    
+    <p class="indent">
     <div class="date">Mar, 2018</div>
       I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">FTC</a>
     </p>
