--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     
   <p>
     <div class="underlined">Internet Security Posture Assessment</div>
-    I'm collaborating with <a href="https://zmap.io/">ZMap</a> and <a href="https://censys.io/">Censys</a> folks at <a href="http://security.engin.umich.edu/">UMich</a> to explore how one would asses the security posture of a country on the Internet. To achieve that, we are working on developing more accurate, vertical scanning. Our current focus is to understand blocking and its effects on Internet-wide scanning.
+    I'm collaborating with <a href="https://zmap.io/">ZMap</a> and <a href="https://censys.io/">Censys</a> folks at <a href="http://security.engin.umich.edu/">UMich</a> to explore how one would asses the security posture of a country on the Internet. To achieve that, we are developing a new scanning method that better handles Internet-wide blocking and SYN protection mechanisms.
   </p>
 
   <p>
