--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
     
   <p>
     <div class="underlined">Internet Security Posture Assessment</div>
-    I'm collaborating with <a href="https://zmap.io/">ZMap</a> and <a href="https://censys.io/">Censys</a> folks at <a href="http://security.engin.umich.edu/">UMich</a> to explore how one would asses the security posture of a country on the Internet. We are developing a new scanning method that better handles Internet-wide blocking and unwanted traffic protection mechanisms (e.g., SYN cookies).
+    I'm collaborating with <a href="https://zmap.io/">ZMap</a> and <a href="https://censys.io/">Censys</a> folks at <a href="http://security.engin.umich.edu/">UMich</a> to explore how one would asses the security posture of a country on the Internet.
+    <ul>
+      <li>How can one define an entitiy on the Internet (e.g., geopolitical, business)?</li>
+      <li>What's the effect of Internet-wide blocking (e.g., IP blacklists) and unwanted traffic filtering (e.g., SYN-flood protection) on scanning?</li>
+    </ul>
   </p>
 
   <p>
@@ -100,7 +104,7 @@
   </p>
 
   <p>
-    <div class="underlined">The (Ab)use of Bitcoin</div>
+    <div class="underlined">Bitcoin and Blockchains</div>
     I'm collaborating with <a href="http://www.qu.edu.qa/engineering/computer/">QU</a> folks to investigate the feasibility of deanonymizing Tor hidden service users by exploiting public Bitcoin information.
   </p>
     
