--- a/index.html
+++ b/index.html
@@ -78,35 +78,35 @@
 
   <h2 class="top">
     <span class="morelinks pdf"><a href="docs/boshmaf_cv.pdf">&raquo;&nbsp;cv</a></span>
-    Research and bio
+    About me
   </h2>
 
-  <p>My research is centered around the security and privacy of social and information networks, with an emphasis on problems that broadly impact the way people use technology and the Internet.</p>
-
-    <p>I received my PhD in <a href="http://www.ece.ubc.ca/">Electrical and Computer Engineering</a> from the University of British Columbia (UBC) under the mentorship of <a href="http://www.ece.ubc.ca/~beznosov/">Konstantin Beznosov</a> and <a href="http://www.ece.ubc.ca/~matei/">Matei Ripeanu</a>. My <a href="https://dx.doi.org/10.14288/1.0167277">thesis</a> presented one of the first security analyses of malicious socialbots on the web.</p>
+  <p>I'm a researcher, a writer, a developer, and a hacker. I build things. I like to be challenged. I go after hard software systems problems. I find peace in academic writing, focusing on topics related to computer science and engineering. I strive to be a successful entrepreneur, mostly by trying new things, learning, and connecting with the right people. Ask me about my side projects and hacks. I'm always on the hunt for a qualitatively new opportunity. I work with people not for them. The world is my home and we are all part of it. All other stuff is entertainment.</p>
 
   <h2>
-    Current projects
+    Projects
   </h2>
-    
+
+  <p>I'm interested in the security and privacy of social and information networks, with an emphasis on problems that broadly impact the way people use technology and the Internet.</p>
+
   <p>
-    <div class="underlined">Internet Security Posture Assessment</div>
-    I'm collaborating with <a href="https://zmap.io/">ZMap</a> and <a href="https://censys.io/">Censys</a> folks at <a href="http://security.engin.umich.edu/">UMich</a> to explore how one would asses the security posture of a country on the Internet.
+    <div class="underlined">Cryptocurrencies and Blockchains</div>
+    (Mis)use of Bitcoin, off-the-counter marketplaces, blockchain analysis
   </p>
 
   <p>
-    <div class="underlined">Mobile Cryptography Analytics</div>
-    I'm collaborating with <a href="http://lersse.ece.ubc.ca/">LERSSE</a> folks at <a href="http://www.ece.ubc.ca/">UBC</a> to build a cloud-based service for analyzing cryptographic API (mis)use in Android applications.
+    <div class="underlined">Applied Cryptography</div>
+    Mobile data-at-rest encryption, (mis)use of crypto APIs
   </p>
 
   <p>
-    <div class="underlined">Bitcoin and Blockchains</div>
-    I'm collaborating with <a href="http://www.qu.edu.qa/engineering/computer/">QU</a> folks to investigate the feasibility of deanonymizing Tor hidden service users by exploiting public Bitcoin information.
+    <div class="underlined">Big Data and Security Analytics</div>
+    Enterprise logs, Internet-wide IP scanning
   </p>
-    
+
   <p>
-    <div class="underlined">Enterprise Log Security Analytics</div>
-    I'm collaborating with the Cyber Security team on building data-driven cyber security defences for the enterprise.
+    <div class="underlined">Web Automation</div>
+    Socialbots, single sign-on
   </p>
 
   <h2>
