--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
   <div id="title">
     <div>Research Scientist, Cyber Security</div>
     <div><a href="http://qcri.com/">Qatar Computing Research Institute, HBKU</a></div>
+    <p><em>before that,</em></p><br/>
+    <div>Software Engineer, <a href="https://hoostsuite.com">Hootsuite</a></div>
+    <div>Research Assistant, <a href="https://ece.ubc.ca">UBC</a></div>
+    <div>Research Intern, <a href="https://research.microsoft.com">Microsoft</a></div>
+    <div>Research Intern, <a href="http://www.tid.es">Telefonica</a></div>
+    <div>Research Intern, <a href="https://research.fb.com">Facebook</a></div>
+    <div>Research Intern, <a href="https://www.sophos.com">Sophos</a></div>
+    <div>Research Intern, <a href="https://www.hlrs.de/home">HLRS</a></div>
+    <div>Software Engineer, <a href="https://www.sap.com">SAP</a></div>
+    <div>Software Engineer, <a href="https://www.intel.com">Intel</a></div>
+    <div>Research Assistant, <a href="https://www.ipvs.uni-stuttgart.de/index1.html?__locale=en">Uni Stuttgart</a></div>
+    <div>Infrastructure Consultant, <a href="https://enterprise.microsoft.com/en-us/services/">Microsoft</a></div>
+    <div>Network Engineer, <a href="http://www.estartasolutions.com">Estarta</a></div>
   </div>
 
   <table id="contact" cellpadding="0" cellspacing="0">
