--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
   <img width="336" src="img/boshmaf.jpg" alt="Yazan Boshmaf">
   <h1><a href="https://boshmaf.github.io">Yazan Boshmaf</a></h1>
   <div id="title">
-    <div>Research Scientist, Cyber Security</div>
-    <div><a href="http://qcri.com/">Qatar Computing Research Institute, HBKU</a></div>
+    <div>Research Scientist, <a href="http://qcri.com/">QCRI</a></div>
     <p><em>before that,</em></p><br/>
     <div>Software Engineer, <a href="https://hoostsuite.com">Hootsuite</a></div>
     <div>Research Assistant, <a href="https://ece.ubc.ca">UBC</a></div>
