--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <h1><a href="https://boshmaf.github.io">Yazan Boshmaf</a></h1>
   <div id="title">
     <div>Research Scientist, <a href="http://qcri.com/">QCRI</a></div>
-    <p><em>before that,</em></p><br/>
+    <p><em>Previously:</em></p>
     <div>Software Engineer, <a href="https://hoostsuite.com">Hootsuite</a></div>
     <div>Research Assistant, <a href="https://ece.ubc.ca">UBC</a></div>
     <div>Research Intern, <a href="https://research.microsoft.com">Microsoft</a></div>
