--- a/index.html
+++ b/index.html
@@ -47,19 +47,26 @@
   <h1><a href="https://boshmaf.github.io">Yazan Boshmaf</a></h1>
   <div id="title">
     <div>Research Scientist, <a href="http://qcri.com/">QCRI</a></div>
-    <p><em>Previously:</em></p>
-    <div>Software Engineer, <a href="https://hoostsuite.com">Hootsuite</a></div>
-    <div>Research Assistant, <a href="https://ece.ubc.ca">UBC</a></div>
-    <div>Research Intern, <a href="https://research.microsoft.com">Microsoft</a></div>
-    <div>Research Intern, <a href="http://www.tid.es">Telefonica</a></div>
-    <div>Research Intern, <a href="https://research.fb.com">Facebook</a></div>
-    <div>Research Intern, <a href="https://www.sophos.com">Sophos</a></div>
-    <div>Research Intern, <a href="https://www.hlrs.de/home">HLRS</a></div>
-    <div>Software Engineer, <a href="https://www.sap.com">SAP</a></div>
-    <div>Software Engineer, <a href="https://www.intel.com">Intel</a></div>
-    <div>Research Assistant, <a href="https://www.ipvs.uni-stuttgart.de/index1.html?__locale=en">Uni Stuttgart</a></div>
-    <div>Infrastructure Consultant, <a href="https://enterprise.microsoft.com/en-us/services/">Microsoft</a></div>
-    <div>Network Engineer, <a href="http://www.estartasolutions.com">Estarta</a></div>
+    
+    <table id="contact" cellpadding="0" cellspacing="0">
+      <tr>
+        <td class="l">Previously:</td>
+        <td>
+          <div>Software Engineer, <a href="https://hoostsuite.com">Hootsuite</a></div>
+          <div>Research Assistant, <a href="https://ece.ubc.ca">UBC</a></div>
+          <div>Research Intern, <a href="https://research.microsoft.com">Microsoft</a></div>
+          <div>Research Intern, <a href="http://www.tid.es">Telefonica</a></div>
+          <div>Research Intern, <a href="https://research.fb.com">Facebook</a></div>
+          <div>Research Intern, <a href="https://www.sophos.com">Sophos</a></div>
+          <div>Research Intern, <a href="https://www.hlrs.de/home">HLRS</a></div>
+          <div>Software Engineer, <a href="https://www.sap.com">SAP</a></div>
+          <div>Software Engineer, <a href="https://www.intel.com">Intel</a></div>
+          <div>Research Assistant, <a href="https://www.ipvs.uni-stuttgart.de/index1.html?__locale=en">Uni Stuttgart</a></div>
+          <div>Infrastructure Consultant, <a href="https://enterprise.microsoft.com/en-us/services/">Microsoft</a></div>
+          <div>Network Engineer, <a href="http://www.estartasolutions.com">Estarta</a></div>
+        </td>
+      </tr>
+    </table>
   </div>
 
   <table id="contact" cellpadding="0" cellspacing="0">
