--- a/index.html
+++ b/index.html
@@ -46,30 +46,31 @@
   <img width="336" src="img/boshmaf.jpg" alt="Yazan Boshmaf">
   <h1><a href="https://boshmaf.github.io">Yazan Boshmaf</a></h1>
   <div id="title">
-    <div>Research Scientist, <a href="http://qcri.com/">QCRI</a></div>
-    
-    <table id="contact" cellpadding="0" cellspacing="0">
-      <tr>
-        <td class="l">Previously:</td>
-        <td>
-          <div>Software Engineer, <a href="https://hoostsuite.com">Hootsuite</a></div>
-          <div>Research Assistant, <a href="https://ece.ubc.ca">UBC</a></div>
-          <div>Research Intern, <a href="https://research.microsoft.com">Microsoft</a></div>
-          <div>Research Intern, <a href="http://www.tid.es">Telefonica</a></div>
-          <div>Research Intern, <a href="https://research.fb.com">Facebook</a></div>
-          <div>Research Intern, <a href="https://www.sophos.com">Sophos</a></div>
-          <div>Research Intern, <a href="https://www.hlrs.de/home">HLRS</a></div>
-          <div>Software Engineer, <a href="https://www.sap.com">SAP</a></div>
-          <div>Software Engineer, <a href="https://www.intel.com">Intel</a></div>
-          <div>Research Assistant, <a href="https://www.ipvs.uni-stuttgart.de/index1.html?__locale=en">Uni Stuttgart</a></div>
-          <div>Infrastructure Consultant, <a href="https://enterprise.microsoft.com/en-us/services/">Microsoft</a></div>
-          <div>Network Engineer, <a href="http://www.estartasolutions.com">Estarta</a></div>
-        </td>
-      </tr>
-    </table>
+    <div>Researcher, writer, developer, and hacker.</div>
   </div>
 
   <table id="contact" cellpadding="0" cellspacing="0">
+    <tr>
+      <td class="l">now:</td>
+      <td>Research Scientist, <a href="http://qcri.com/">QCRI</a></td>
+    </tr>
+    <tr>
+      <td class="l">before:</td>
+      <td>
+        <div>Software Engineer, <a href="https://hoostsuite.com">Hootsuite</a></div>
+        <div>Research Assistant, <a href="https://ece.ubc.ca">UBC</a></div>
+        <div>Research Intern, <a href="https://research.microsoft.com">Microsoft</a></div>
+        <div>Research Intern, <a href="http://www.tid.es">Telefonica</a></div>
+        <div>Research Intern, <a href="https://research.fb.com">Facebook</a></div>
+        <div>Research Intern, <a href="https://www.sophos.com">Sophos</a></div>
+        <div>Research Intern, <a href="https://www.hlrs.de/home">HLRS</a></div>
+        <div>Software Engineer, <a href="https://www.sap.com">SAP</a></div>
+        <div>Software Engineer, <a href="https://www.intel.com">Intel</a></div>
+        <div>Research Assistant, <a href="https://www.ipvs.uni-stuttgart.de/index1.html?__locale=en">Uni Stuttgart</a></div>
+        <div>Infrastructure Consultant, <a href="https://enterprise.microsoft.com/en-us/services/">Microsoft</a></div>
+        <div>Network Engineer, <a href="http://www.estartasolutions.com">Estarta</a></div>
+      </td>
+    </tr>
     <tr>
       <td class="l">email:</td>
       <td><a id="email">yboshmaf at hbku edu qa</a> &nbsp;</td>
@@ -100,7 +101,7 @@
     About me
   </h2>
 
-  <p>I'm a researcher, a writer, a developer, and a hacker. I build things. I like to be challenged. I go after hard software systems problems. I find peace in academic writing, focusing on topics related to computer science and engineering.</p>
+  <p>I build things. I like to be challenged. I go after hard software systems problems. I find peace in academic writing, focusing on topics related to computer science and engineering.</p>
   <p>I received my PhD in <a href="http://www.ece.ubc.ca/">Electrical and Computer Engineering</a> from the University of British Columbia (UBC) under the mentorship of <a href="http://www.ece.ubc.ca/~beznosov/">Konstantin Beznosov</a> and <a href="http://www.ece.ubc.ca/~matei/">Matei Ripeanu</a>. My <a href="https://dx.doi.org/10.14288/1.0167277">thesis</a> presented one of the first security analyses of malicious socialbots on the web.</p>
   <h2>
     Projects
