--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     About me
   </h2>
 
-  <p>I build things. I like to be challenged. I go after hard software systems problems. I find peace in academic writing, focusing on topics related to computer science and engineering. I strive to be a successful entrepreneur, mostly by trying new things, learning, and connecting with the right people. Ask me about my side projects and hacks.</p>
+  <p>I build things. I like to be challenged. I go after hard software systems problems. I find peace in academic writing. I strive to be a successful entrepreneur. Ask me about my side projects and hacks.</p>
   <p>I received my PhD in <a href="http://www.ece.ubc.ca/">Electrical and Computer Engineering</a> from the University of British Columbia (UBC) under the mentorship of <a href="http://www.ece.ubc.ca/~beznosov/">Konstantin Beznosov</a> and <a href="http://www.ece.ubc.ca/~matei/">Matei Ripeanu</a>. My <a href="https://dx.doi.org/10.14288/1.0167277">thesis</a> presented one of the first security analyses of malicious socialbots on the web.</p>
   <h2>
     Projects
