--- a/news.html
+++ b/news.html
@@ -28,6 +28,7 @@
     
     <p class="indent">
     <div class="date">Mar, 2018</div>
+      Our <a href="https://www.qnrf.org/en-us/Funding/Research-Programs/Thematic-and-Grand-Challenges-Research-Program/T%C3%9CB%C4%B0TAK-QNRF-Joint-Funding-Program">TÜBİTAK/QNRF</a> grant proposal has been accepted</br>
       I'm joining the <a href="https://thepeninsulaqatar.com/article/27/03/2018/Third-Cybersecurity-Experts-Group-meeting-begins">3rd Cybersecuirty Experts Group</a> meeting</br>
       I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">FTC</a>
     </p>
