--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
   </h2>
   
   <p class="indent">
+    <div class="underlined">May, 2018</div>
+    I'm presenting at <a href="http://asiaccs2018.org">ACM AsiaCCS 2018</a>. See you in Songdo!
+  </p>
+
+  <p class="indent">
     <div class="underlined">Apr, 2018</div>
     I'm attending <a href="https://icde2018.org">IEEE ICDE 2018</a>. See you in Paris!
   </p> 
