--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
    
   <p class="indent">
     <div class="underlined">Mar, 2018</div>
-    Our <a href="https://www.qnrf.org/en-us/Funding/Research-Programs/Thematic-and-Grand-Challenges-Research-Program/T%C3%9CB%C4%B0TAK-QNRF-Joint-Funding-Program">TÜBİTAK/QNRF</a> grant proposal has been accepted</br>
-    I'm joining the <a href="https://thepeninsulaqatar.com/article/27/03/2018/Third-Cybersecurity-Experts-Group-meeting-begins">3rd Cybersecuirty Experts Group</a> meeting</br>
-    I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">FTC</a>
+    Our <a href="https://www.qnrf.org/en-us/Funding/Research-Programs/Thematic-and-Grand-Challenges-Research-Program/T%C3%9CB%C4%B0TAK-QNRF-Joint-Funding-Program">TÜBİTAK/QNRF</a> grant proposal has been accepted.</br>
+    I'm joining the <a href="https://thepeninsulaqatar.com/article/27/03/2018/Third-Cybersecurity-Experts-Group-meeting-begins">3rd Cybersecuirty Experts Group</a> meeting.</br>
+    I'm co-presenting our Bitcoin/Tor privacy work at the <a href="http://www.ftc.gov/otech">FTC</a>.
   </p>
 
   <p class="indent">
     <div class="underlined">Jan, 2018</div>
-    Our work on Bitcoin/Tor privacy has been <a href="https://www.wired.com/story/bitcoin-drug-deals-silk-road-blockchain/">covered</a> by WIRED</br>
-    I'm speaking at the <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">6th Katara Tech Forum</a> on Blockchain Technology
+    Our work on Bitcoin/Tor privacy has been <a href="https://www.wired.com/story/bitcoin-drug-deals-silk-road-blockchain/">covered</a> by WIRED.</br>
+    I'm speaking at the <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">6th Katara Tech Forum</a> on Blockchain Technology.
   </p>
 
   <h2>
