--- a/pubs.html
+++ b/pubs.html
@@ -25,7 +25,7 @@
     
     <h3>2018</h3>
     <p>
-      <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/324/files/binsight-asiaccs-2018.pdf">Source Attribution for Cryptographic API Misuse in Android Applications</a></span></div>
+      <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/324/files/binsight-asiaccs-2018.pdf">Source Attribution of Cryptographic API Misuse in Android Applications</a></span></div>
       <small>
       Ildar Muslukhov, Yazan Boshmaf, and Konstantin Beznosov
     <div class=ref><i>Proc. of 11th ACM Asia Conference on Computer and Communications Security</i><br>
