--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
+    
+  <p class="indent">
+    <div class="underlined">May, 2018</div>
+    I'm attending at <a href="https://wisec18.conf.kth.se">ACM WiSec 2018</a>. See you in Stockholm!
+  </p>
   
   <p class="indent">
     <div class="underlined">May, 2018</div>
