--- a/news.html
+++ b/news.html
@@ -22,6 +22,11 @@
     <div class=spacer></div>
     
     <p class="indent">
+    <div class="date">Jun, 2018</div>
+      I'm attending at <a href="https://wisec18.conf.kth.se">ACM WiSec 2018</a>. See you in Stockholm!
+    </p>
+    
+    <p class="indent">
     <div class="date">May, 2018</div>
       I'm presenting at <a href="http://asiaccs2018.org">ACM AsiaCCS 2018</a>. See you in Songdo!
     </p>
