--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     
   <p class="indent">
     <div class="underlined">Jun, 2018</div>
-    I'm attending at <a href="https://wisec18.conf.kth.se">ACM WiSec 2018</a>. See you in Stockholm!
+    I'm attending <a href="https://wisec18.conf.kth.se">ACM WiSec 2018</a>. See you in Stockholm!
   </p>
   
   <p class="indent">
