--- a/pubs.html
+++ b/pubs.html
@@ -25,6 +25,15 @@
     
     <h3>2018</h3>
     <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1809.06044">BlockTag: Design and Applications of a Tagging System for Blockchain Analysis</a></span></div>
+      <small>
+      Yazan Boshmaf, Husam Al Jawaheri, and Mashael Al Sabah
+    <div class=ref><i>arXiv preprint</i><br>
+      arXiv:1809.060441, Sep, 2018</div>
+    </small>
+    </p>
+  
+    <p>
       <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/324/files/binsight-asiaccs-2018.pdf">Source Attribution of Cryptographic API Misuse in Android Applications</a></span></div>
       <small>
       Ildar Muslukhov, Yazan Boshmaf, and Konstantin Beznosov
