--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
   <table id="contact" cellpadding="0" cellspacing="0">
     <tr>
       <td class="l">now:</td>
-      <td>Research Scientist, <a href="http://qcri.com/">QCRI</a></td>
+      <td>Research Scientist, <a href="http://qcri.com/">QCRI</a><br>
+          Research Lead, <a href="https://qcri.github.io/cibr">CIBR</a>
+      </td>
     </tr>
     <tr>
       <td class="l">before:</td>
@@ -133,6 +135,11 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
+
+  <p class="indent">
+    <div class="underlined">Oct, 2018</div>
+    I'm leading QCRI's new <a href="https://qcri.github.io/cibr">initiative for blockchain research</a>
+  </p>
     
   <p class="indent">
     <div class="underlined">Jun, 2018</div>
