--- a/news.html
+++ b/news.html
@@ -20,6 +20,11 @@
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;home</a></h2>
     <div class=spacer></div>
+
+    <p class="indent">
+      <div class="date">Oct, 2018</div>
+      I'm leading QCRI's new <a href="https://qcri.github.io/cibr">initiative for blockchain research</a>
+    </p>
     
     <p class="indent">
     <div class="date">Jun, 2018</div>
