--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
 
     <p class="indent">
       <div class="date">Oct, 2018</div>
-      I'm leading QCRI's new <a href="https://qcri.github.io/cibr">initiative for blockchain research</a>
+      I'm leading QCRI's new <a href="https://qcri.github.io/cibr">initiative for blockchain research</a>.
     </p>
     
     <p class="indent">
