--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
   <p class="indent">
     <div class="underlined">Oct, 2018</div>
-    I'm leading QCRI's new <a href="https://qcri.github.io/cibr">initiative for blockchain research</a>
+    I'm leading QCRI's new <a href="https://qcri.github.io/cibr">initiative for blockchain research</a>.
   </p>
     
   <p class="indent">
