Adds research statement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="icon" href="img/favicon.png">
 
-  <title>Yazan Boshmaf</title>
+  <title>Home - Yazan Boshmaf</title>
 
   <link rel="stylesheet" href="css/common.css" type="text/css">
   <style type="text/css">
@@ -106,7 +106,8 @@
   <p>I build things. I like to be challenged. I go after hard software systems problems. I find peace in academic writing. I strive to be a successful entrepreneur. Ask me about my side projects and hacks.</p>
   <p>I received my PhD in <a href="http://www.ece.ubc.ca/">Electrical and Computer Engineering</a> from the University of British Columbia (UBC) under the mentorship of <a href="http://www.ece.ubc.ca/~beznosov/">Konstantin Beznosov</a> and <a href="http://www.ece.ubc.ca/~matei/">Matei Ripeanu</a>. My <a href="https://dx.doi.org/10.14288/1.0167277">thesis</a> presented one of the first security analyses of malicious socialbots on the web.</p>
   <h2>
-    Projects
+    <span class="morelinks"><a href="research.html">&raquo;&nbsp;statement</a></span>
+    Research
   </h2>
 
   <p>I'm interested in the security and privacy of social and information networks, with an emphasis on problems that broadly impact the way people use technology and the Internet.</p>
