--- a/news.html
+++ b/news.html
@@ -4,7 +4,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="description" content="Yazan Boshmaf, Research Scientist in Cyber Security at Qatar Computing Research Institute, HBKU">
-  <meta name="keywords" content="Yazan Boshmaf, Boshmaf, News, Security, Privacy, Research, QCRI, HBKU"> 
+  <meta name="keywords" content="Yazan Boshmaf, Boshmaf, News, Security, Privacy, Research, QCRI, HBKU">
+
+  <title>News - Yazan Boshmaf</title>
 
   <link rel="stylesheet" href="css/common.css" type="text/css">
   <style type="text/css">
@@ -18,7 +20,7 @@
   <div class="fore">
 
     <h1>News</h1>
-    <h2><a href="index.html">&laquo;&nbsp;home</a></h2>
+    <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
 
     <p class="indent">
