--- a/pubs.html
+++ b/pubs.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Yazan Boshmaf, Research Scientist in Cyber Security at Qatar Computing Research Institute, HBKU">
   <meta name="keywords" content="Yazan Boshmaf, Boshmaf, News, Security, Privacy, Research, QCRI, HBKU"> 
 
+  <title>Publications - Yazan Boshmaf</title>
+
   <link rel="stylesheet" href="css/common.css" type="text/css">
   <style type="text/css">
     .title { margin: 0 0 3px 0; }
@@ -20,7 +22,7 @@
     <h2><span class="morelinks">
       <a href="https://scholar.google.com/citations?user=oDTfXXYAAAAJ">&raquo;&nbsp;Google Scholar</a>
       <a href="http://dblp.uni-trier.de/pers/hd/b/Boshmaf:Yazan">&raquo;&nbsp;dblp</a>
-      </span><a href="index.html">&laquo;&nbsp;home</a>
+      </span><a href="index.html">&laquo;&nbsp;Home</a>
     </h2>
     
     <h3>2018</h3>
