--- a/students.html
+++ b/students.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Yazan Boshmaf, Research Scientist in Cyber Security at Qatar Computing Research Institute, HBKU">
   <meta name="keywords" content="Yazan Boshmaf, Boshmaf, News, Security, Privacy, Research, QCRI, HBKU"> 
 
+  <title>Students - Yazan Boshmaf</title>
+
   <link rel="stylesheet" href="css/common.css" type="text/css">
   <style type="text/css">
     .title { margin: 5px 0 5px 0; font-weight: bold; text-decoration: underline; }
@@ -18,7 +20,7 @@
   <div class="fore">
 
     <h1>Research is Fun!</h1>
-    <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a></h2>
+    <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
 
     <p class="indent">
