--- a/research.html
+++ b/research.html
@@ -20,12 +20,12 @@
   <div class="fore">
 
     <h1>Research Statement</h1>
-    <h5 style="margin-bottom: 0px; margin-top: 5px;">A highly-opinionated response to why I do research</h5>
+    <h5 style="margin-bottom: 0px; margin-top: 5px;">A highly opinionated response to why I do research</h5>
     <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
 
     <p class="indent">
-      <p style="padding: 16px 38px;"><em><b>Summary.</b> We live in the Information Age. Innovations in information technology, such as the World Wide Web (a.k.a. the Web), play a pivotal role in advancing today's knowledge-based societies and should be protected at all costs. My research revolves around the security and privacy of the Web, with an emphasis on problems that impact the way we adopt and use its underlying technologies. My ultimate goal is to empower Web users by building software systems that are resilient to centralized control and offer higher levels of privacy and security.</em></p>
+      <p style="padding: 16px 38px;"><em><b>Summary.</b> We live in the Information Age. Innovations in information technology, such as the World Wide Web (a.k.a. the Web), play a pivotal role in advancing today's knowledge-based societies and should be protected at all costs. My research revolves around the security and privacy of the Web, with an emphasis on problems that impact the way we adopt and use its underlying technologies. My ultimate goal is to empower Web users by building software systems that given users full control of their data, are resilient to centralized control, and offer higher levels of privacy and security.</em></p>
 
       <div class="title">Background</div>
       <p>One characteristic of the Information Age is that our society is surrounded by a high-tech global economy in which wealth is knowledge and growth is learning. This system of the world leads to a fundamental question about our experience with the Web: When we go online, how do we identify ourselves, connect with others, and gain knowledge?</p>
