--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
 
       <p>I implemented Integro on top of open-source distributed systems and deployed it at Tuenti, a progressive OSN with millions of users. A production-class evaluation resulted in detecting nearly 10 times more fake accounts than existing defense systems. This was done in under 30 minutes for a social graph with 160 million nodes on 33 commodity machines.</p>
       
-      <p>It is important to highlight that websites should take the initiative and integrate, or at least evaluate, new defense systems against theirs, hopefully before innovation is stifled by new, restrictive Web regulations that are drafted in response to emerging security and privacy concerns. This rings true with a new EU data privacy law in place and a recent push in the U.S. to regulate high-tech companies.</p>
+      <p>It is important to highlight that websites should take the initiative and integrate, or at least evaluate, new defense systems against theirs, hopefully before innovation is stifled by new, restrictive Web regulations that are drafted in response to emerging security and privacy concerns. This rings true with the new EU GDPR law put in place and the recent push in the U.S. to regulate high-tech companies.</p>
 
       <div class="title">The Decentralized Web: The Case for Bitcoin</div>
       <p>In 2016, I started exploring how victim prediction can be applied to different Web security problems [<a href="#9">9</a>]. I quickly realized, however, that this approach gives more legitimacy to collecting user data by closed, centralized systems. Moreover, operating “big data silos” will eventually be infeasible, as there will be far more data than a single, centralized system can manage for free.</p>
