--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
   <p class="indent">
     <div class="underlined">Oct, 2018</div>
-    I'm presenting to teacher of <a href="https://asd.sch.qa">ASD</a> on blockchain technology.<br>
+    I'm presenting to teachers of <a href="https://asd.sch.qa">ASD</a> on blockchain technology.<br>
   </p>
     
   <p class="indent">
