--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
 
     <p class="indent">
       <div class="date">Oct, 2018</div>
-      I'm presenting to teacher of <a href="https://asd.sch.qa">ASD</a> on blockchain technology.
+      I'm presenting to teachers of <a href="https://asd.sch.qa">ASD</a> on blockchain technology.
     </p>
     
     <p class="indent">
