--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
+    
+  <p class="indent">
+    <div class="underlined">Jan, 2019</div>
+    I'm organizing the 1st <a href="https://www.eventbrite.com/e/qcri-blockchain-workshop-tickets-55124403575">ASDQCRI Workshop on Blockchains</a>. Come join us!<br>
+  </p>
 
   <p class="indent">
     <div class="underlined">Oct, 2018</div>
