--- a/news.html
+++ b/news.html
@@ -22,6 +22,11 @@
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
+    
+    <p class="indent">
+      <div class="date">Jan, 2019</div>
+      I'm organizing the 1st <a href="https://www.eventbrite.com/e/qcri-blockchain-workshop-tickets-55124403575">QCRI Blockchain Workshop</a>. Come join us!
+    </p>
 
     <p class="indent">
       <div class="date">Oct, 2018</div>
