--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
     
   <p class="indent">
     <div class="underlined">Jan, 2019</div>
-    I'm organizing the 1st <a href="https://www.eventbrite.com/e/qcri-blockchain-workshop-tickets-55124403575">ASDQCRI Workshop on Blockchains</a>. Come join us!<br>
+    I'm organizing the 1st <a href="https://www.eventbrite.com/e/qcri-blockchain-workshop-tickets-55124403575">QCRI Blockchain Workshop</a>. Come join us!
   </p>
 
   <p class="indent">
     <div class="underlined">Oct, 2018</div>
-    I'm presenting to teachers of <a href="https://asd.sch.qa">ASD</a> on blockchain technology.<br>
+    I'm presenting to teachers of <a href="https://asd.sch.qa">ASD</a> on blockchain technology.
   </p>
     
   <p class="indent">
