Updates CIBR news

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   <table id="contact" cellpadding="0" cellspacing="0">
     <tr>
       <td class="l">now:</td>
-      <td>Research Scientist, <a href="http://qcri.com/">QCRI</a>
+      <td>Research Scientist, <a href="http://qcri.com/">QCRI</a><br>
+          Research Lead, <a href="https://qcri.github.io/cibr">CIBR</a>
       </td>
     </tr>
     <tr>
@@ -138,7 +139,7 @@
     
   <p class="indent">
     <div class="underlined">Jan, 2019</div>
-    I'm organizing the 1st <a href="https://www.eventbrite.com/e/qcri-blockchain-workshop-tickets-55124403575">QCRI Blockchain Workshop</a>. Come join us!
+    I'm leading the<a href="https://qcri.github.io/cibr"> new blockchain research initiative</a> at QCRI.
   </p>
 
   <p class="indent">
