--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
     
     <p class="indent">
       <div class="date">Jan, 2019</div>
-      I'm organizing the 1st <a href="https://www.eventbrite.com/e/qcri-blockchain-workshop-tickets-55124403575">QCRI Blockchain Workshop</a>. Come join us!
+      I'm leading the<a href="https://qcri.github.io/cibr"> new blockchain research initiative</a> at QCRI.
     </p>
 
     <p class="indent">
