--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
     
   <p class="indent">
     <div class="underlined">Feb, 2019</div>
-    Our BlockTag <a href="https://arxiv.org/abs/1809.06044" target="_blank">paper</a> got accepted at <a href="https://www.ifipsec.org/2019/" target="_blank">IFIP SEC 2019</a>.</br>
-    I'm presenting to the folks at <a href="https://peckshield.com" target="_blank">PeckShield</a> about ongoing CIBR research. See you in Hangzhou!
+    Our BlockTag <a href="https://arxiv.org/abs/1809.06044" target="_blank">paper</a> got accepted at <a href="https://www.ifipsec.org/2019/" target="_blank">IFIP SEC'19</a>.</br>
+    I'm presenting to the folks at <a href="https://peckshield.com" target="_blank">PeckShield</a> about ongoing CIBR research.
   </p>
   
   <p class="indent">
