--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <p class="indent">
     <div class="underlined">Jan, 2018</div>
     Our work on Bitcoin/Tor privacy has been <a href="https://www.wired.com/story/bitcoin-drug-deals-silk-road-blockchain/">covered</a> by WIRED.<br>
-    I'm speaking at the <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">6th Katara Tech Forum</a> on Blockchain Technology.
+    I'm speaking at the <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">6th Katara Tech Forum</a> about blockchain technology.
   </p>
 
   <h2>
