--- a/pubs.html
+++ b/pubs.html
@@ -30,8 +30,8 @@
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1809.06044">BlockTag: Design and Applications of a Tagging System for Blockchain Analysis</a></span></div>
       <small>
       Yazan Boshmaf, Husam Al Jawaheri, and Mashael Al Sabah
-    <div class=ref><i>arXiv preprint</i><br>
-      arXiv:1809.060441, Sep, 2018</div>
+    <div class=ref><i>Proc. of 34th International Conference on ICT Systems Security and Privacy Protection</i><br>
+      IFIP SEC&rsquo;19, Lisbon, Portugal, Jun 2019</div>
     </small>
     </p>
   
