--- a/news.html
+++ b/news.html
@@ -25,8 +25,7 @@
     
     <p class="indent">
       <div class="date">Feb, 2019</div>
-      Our BlockTag <a href="https://arxiv.org/abs/1809.06044" target="_blank">paper</a> has been accepted at <a href="https://www.ifipsec.org/2019/" target="_blank">IFIP SEC'19</a>.</br>
-      I'm presenting to the folks at <a href="https://peckshield.com" target="_blank">PeckShield</a> about ongoing CIBR research.
+      I'm presenting to the folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR research.
     </p>
     
     <p class="indent">
