--- a/index.html
+++ b/index.html
@@ -153,14 +153,23 @@
     </span>
     Selected publications
   </h2>
+  
+  <p>
+    <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/324/files/binsight-asiaccs-2018.pdf">Source Attribution of Cryptographic API Misuse in Android Applications</a></span></div>
+    <small>
+      Ildar Muslukhov, Yazan Boshmaf, and Konstantin Beznosov
+      <div class=ref><i>Proc. of 11th ACM Asia Conference on Computer and Communications Security</i><br>
+      AsiaCCS &rsquo;18, Songdo, Incheon, Korea, Jun 2018</div>
+    </small>
+  </p>
 
   <p>
-    <div class="title"><span class="pdf"><a class=title href="https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/43862.pdf">Thwarting Fake OSN Accounts by Predicting their Victims</a></span></div>
+  <div class="title"><span class="pdf"><a class=title href="http://homepages.inf.ed.ac.uk/gdp/publications/sketch.pdf">Interacting with Large Distributed Datasets using Sketch</a></span></div>
     <small>
-    Yazan Boshmaf, Matei Ripeanu, Konstantin Beznosov, and Elizeu Santos-Neto
-  <div class=ref><i>Proc. 8th ACM Workshop on Artificial Intelligence and Security</i><br>
-    AI-Sec &rsquo;15, Denver, CO, Oct 2015</div>
-  </small>
+      Mihai Budiu, Rebecca Isaacs, Derek Murray, Gordon Plotkin, Paul Barham, Samer Al-Kiswany, Yazan Boshmaf, Qingzhou Luo, and Alexandr Andoni
+      <div class=ref><i>Proc. of 2016 Eurographics Symposium on Parallel Graphics and Visualization</i><br>
+      EGPGV &rsquo;16, Groningen, the Netherlands, Jun 2016</div>
+    </small>
   </p>
 
   <p>
@@ -173,30 +182,21 @@
   </p>
 
   <p>
-    <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/286/files/ASONAM_2013.pdf">Graph-based Sybil Detection in Social and Information Systems</a></span></div>
-    <small>
-    Yazan Boshmaf, Konstantin Beznosov, and Matei Ripeanu
-  <div class=ref><i>Proc. of 2013 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining</i><br>
-    ASONAM &rsquo;13, Niagara Falls, Canada, Aug 2013 &mdash; <b>best paper award</b></div>
-  </small>
-  </p>
-
-  <p>
-    <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/275/files/275.pdf">Key Challenges in Defending against Malicious Socialbots</a></span></div>
-    <small>
-    Yazan Boshmaf, Ildar Muslukhov, Konstantin Beznosov, Matei Ripeanu
-  <div class=ref><i>Proc. of 5th USENIX Workshop on Large-Scale Exploits and Emergent Threats</i><br>
-    LEET &rsquo;12, San Jose, CA, Apr 2012</div>
-  </small>
-  </p>
-
-  <p>
     <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/264/files/264.pdf">The Socialbot Network: When Bots Socialize for Fame and Money</a></span></div>
     <small>
     Yazan Boshmaf, Ildar Muslukhov, Konstantin Beznosov, and Matei Ripeanu
   <div class=ref><i>Proc. of 27th Annual Computer Security Applications Conference</i><br>
     ACSAC &rsquo;11, Orlando, FL, Dec 2011 &mdash; <b>outstanding paper award</b></div>
   </small>
+  </p>
+
+  <p>
+    <div class="title"><span class="pdf"><a class=title href="http://www.vldb.org/pvldb/2/vldb09-327.pdf">SIMD-Scan: Ultra Fast in-Memory Table Scan Using on-Chip Vector Processing Units</a></span></div>
+    <small>
+      Thomas Willhalm, Nicolae Popovici, Yazan Boshmaf, Hasso Plattner, Alexander Zeier, and Jan Schaffner
+      <div class=ref><i>Proc. of the VLDB Endowment</i><br>
+      Volume 2, Issue 1, Pages 385-394, Aug 2009</div>
+    </small>
   </p>
 
   </td></tr></table>
