Adds ifip sec event

--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
+
+  <p class="indent">
+    <div class="underlined">Jun, 2019</div>
+    I'm presenting at <a href="https://www.ifipsec.org/2019/">IFIP Sec 2019</a>. See you in Lisbon!
+  </p>
     
   <p class="indent">
     <div class="underlined">Feb, 2019</div>
