--- a/news.html
+++ b/news.html
@@ -22,6 +22,11 @@
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
+
+    <p class="indent">
+      <div class="date">Jun, 2019</div>
+      I'm presenting at <a href="https://www.ifipsec.org/2019/">IFIP Sec 2019</a>. See you in Lisbon!
+    </p>
     
     <p class="indent">
       <div class="date">Feb, 2019</div>
